--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"test": "echo 'No tests specified'",
 		"clean": "rm -rf dist node_modules/.vite",
 		"dev:host": "vite --host",
-		"build:watch": "vite build --watch"
+		"build:watch": "vite build --watch",
+		"run:scripts" : "node script.ts"
 	},
 	"dependencies": {
 		"history": "^5.3.0",
